[add] update design home page

--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -1,3 +1,13 @@
+/* ==========================================================================
+   Sommaire
+
+   
+   ========================================================================== */
+
+/* ==========================================================================
+   
+   ========================================================================== */
+
 html {
   min-height: 100%;
 }
@@ -25,8 +35,6 @@ h2, h3, h4 {
 a {
   text-decoration: none;
 }
-
-
 
 .link-list {
   padding: 0;
