--- a/user/front.css
+++ b/user/front.css
@@ -1,3 +1,13 @@
+/* ==========================================================================
+   Sommaire
+
+   
+   ========================================================================== */
+
+/* ==========================================================================
+   
+   ========================================================================== */
+
 .login {
   width: 20em;
   position: absolute;
