--- a/user/interface.css
+++ b/user/interface.css
@@ -5,7 +5,7 @@
    ========================================================================== */
 
 /* ==========================================================================
-   
+   1 = 
    ========================================================================== */
 
 .user-image {
@@ -38,28 +38,39 @@
   margin-top: -0.3em;
 }
 
+/* ==========================================================================
+   2 = Apps
+   ========================================================================== */
+
 .apps {
-  margin-left: 20em;
+  position: absolute;
+  left: 50%;
+  margin-left: -50%;
+  width: 100%;
+  text-align: center;
+  top: 10em;
 }
 
 .apps li {
   display: inline-block;
-  text-align: center;
   margin-left: 1em!important;
 }
 
 .apps a {
   display: block;
-  width: 8.4em;
-  height: 8.4em;
+  width: 2.2em;
+  height: 2.2em;
   position: relative;
-  overflow: hidden;
-  color: #409edd;
-  font-size: 1.5em; 
+  color: #FFF;
+  font-size: 6em; 
+  padding: 0.2em;
 } 
 
 .apps span {
   display: block;
+  font-size: 0.3em;
+  margin-top: -1.2em;
+  margin-left: 0.2em;
 }
 
 .apps a:before {
