--- a/user/interface.less
+++ b/user/interface.less
@@ -9,12 +9,16 @@
    ========================================================================== */
    
 .interface {
-  /*width: 320px;
-  margin: auto;*/
+  width: 320px;
+  margin: auto;
 }   
 
 .user {
   margin: 1.5em 0;
+}
+
+footer {
+  padding: 3em 0;
 }
 
 .user-image {
