--- a/user/interface.less
+++ b/user/interface.less
@@ -1,3 +1,5 @@
+@import "../lib/css/mixins-flex.less";
+
 /* ==========================================================================
    Sommaire
 
@@ -103,4 +105,20 @@ footer {
   left: 0;
   width: 15em;
   height: 100%;
+}
+
+.application-window {
+  font-size: 4em;
+  color: #FFF;
+  text-align: center;
+}
+
+/* ==========================================================================
+   Menu Apps
+   ========================================================================== */
+
+
+
+.menu-apps {
+  .flex-display(flex);
 }
