[add] menu gauche

--- a/user/interface.less
+++ b/user/interface.less
@@ -117,8 +117,20 @@ footer {
    Menu Apps
    ========================================================================== */
 
-
-
 .menu-apps {
   .flex-display(flex);
+  width: 5em;
+  background: #333;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  .flex-direction(column);
+  li {
+    box-shadow: none;
+    a {
+      font-size: 2em;
+    }
+  }
 }
+
