--- a/lib/css/main.less
+++ b/lib/css/main.less
@@ -235,14 +235,16 @@ form legend {
 .purplebg { .bgColor(@purple); }
 
 .yellowbg { .bgColor(@yellow); }
+.pinkbg { .bgColor(@pink); }
 .orangebg { .bgColor(@orange); }
 .redbg { .bgColor(@red); }
 .turquoisebg { .bgColor(@turquoise); }
 .bluebg { .bgColor(@blue); }
 .greenbg { .bgColor(@green); }
 .darkbluebg { .bgColor(@darkblue); }
+.lightbluebg { .bgColor(@lightblue); }
 /*
-.lightbluebg { background: @lightblue; }
+
 .lightpinkbg { background: @lightpink; }
 .lightyellow { background: @lightyellow; }
 .lightgreen { background: @lightgreen; }*/
