--- a/lib/css/colors.less
+++ b/lib/css/colors.less
@@ -6,6 +6,7 @@
 @blue: #3498db;
 @green: #2ecc71;
 @darkblue: #34495e;
+@pink:#D66D92;
 @lightblue: #6A93D4;
 @lightpink: #F76F87;
 @lightyellow: #FFC973;
