--- a/user/interface.less
+++ b/user/interface.less
@@ -70,9 +70,10 @@ footer {
    ========================================================================== */
 
 .apps {
-  text-align: center;
+  /*text-align: center;*/
   position: relative;
   z-index: 10;
+  letter-spacing: -5px;
   /*padding-left: 15em;*/
 }
 
@@ -80,7 +81,7 @@ footer {
   display: inline-block;
   text-align: left;
   margin-bottom: 0;
-  
+  letter-spacing: normal;
 }
 
 .interface .apps .box {
@@ -92,12 +93,12 @@ footer {
   display: block;
   min-height: 2em;
   color: #FFF;
-  font-size: 4em;
+  font-size: 3em;
   /*width: 2.7em;
   height: 2.7em;
   font-size: 5em; 
   */
-  padding: 0.5em 0.2em;
+  padding: 0.2em 0.2em;
 } 
 
 .apps span {
