--- a/user/interface.less
+++ b/user/interface.less
@@ -151,6 +151,7 @@ footer {
   /*.flex-direction(column-reverse);*/
   overflow: hidden;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -ms-transition: all 0.5s ease;
