--- a/lib/css/main.less
+++ b/lib/css/main.less
@@ -246,8 +246,8 @@ form legend {
 .greenbg { .bgColor(@green); }
 .darkbluebg { .bgColor(@darkblue); }
 .lightbluebg { .bgColor(@lightblue); }
-/*
+.lightpinkbg { .bgColor(@lightpink); }
+.lightyellow { .bgColor(@lightyellow); }
+.lightgreen { .bgColor(@lightgreen); }
+.purpledarkbg { .bgColor(@darkpurple) }
 
-.lightpinkbg { background: @lightpink; }
-.lightyellow { background: @lightyellow; }
-.lightgreen { background: @lightgreen; }*/
