--- a/user/interface.less
+++ b/user/interface.less
@@ -124,8 +124,9 @@ footer {
   /*text-align: center;*/
   position: relative;
   z-index: 10;
-  width: 100%;
-  padding-top: 5em;
+  width: 78%;
+  margin: auto;
+  padding-top: 10em;
 }
 
 .apps h2 {
@@ -167,6 +168,14 @@ footer {
 
 .interface .logo img {
   opacity: 0.4;
+  .transition;
+  cursor:pointer;
+}
+
+.interface .logo:hover {
+  img {
+    opacity: 1;
+  }
 }
 
 .apps a {
