add volet gauche user + password

--- a/lib/css/main.less
+++ b/lib/css/main.less
@@ -205,6 +205,12 @@ form legend {
 .icon-upload:before {
   content: "\e604";
 }
+.icon-left-open:before {
+  content: "\e802";
+}
+.icon-right-open:before {
+  content: "\e801";
+}
 
 
 /* ==========================================================================
