--- a/user/interface.less
+++ b/user/interface.less
@@ -18,6 +18,8 @@
    1 = User
    ========================================================================== */
 
+@widthuser: 25em;
+
 .overlay {
   background: rgb(104,104,104);
   background: -moz-radial-gradient(center, ellipse cover,  rgba(104,104,104,1) 0%, rgba(68,68,68,1) 100%);
@@ -32,10 +34,63 @@
   height: 100%;
   padding:2em 3em;
   display: none;
+  overflow: hidden;
+  .transition;
   &.active {
     display: block;
   }
+  &.user-active {
+    padding-left: @widthuser;
+    .user-config-container {
+      left: 0;
+    }
+    .user {
+      width: calc(100%-@widthuser);
+      left: @widthuser;
+    }
+  }
+  &.password-active {
+    padding-left: @widthuser*2;
+    padding-right: 0;
+    .user-config-password {
+      left: 0;
+    }
+    .user-config-container {
+      left: @widthuser;
+    }
+    .user {
+      width: calc(100%-(@widthuser*2)-4%);
+      left: @widthuser*2;
+    }
+    .apps {
+      width: 81%;
+      a {
+        font-size: 3em;
+      }
+      h2 {
+        font-size: 1.5em;
+      }
+      li:first-child {
+        margin-left: 8em!important;
+      }
+    }
+  }
 }  
+
+.close {
+  font-family: Verdana;
+  background: #999;
+  color: #333;
+  position: absolute;
+  right: 1em;
+  top: 1em;
+  padding: 0.2em 0.5em;
+  font-weight: bold;
+  cursor: pointer;
+  &:hover {
+    background: #FFF;
+  }
+}
 
 .user {
   /*margin: 1.5em 0;*/
@@ -47,6 +102,7 @@
   height: 4em;
   box-shadow: 0 3px 10px rgba(0,0,0,0.4);
   z-index: 20;
+  .transition;
 }
 
 footer {
@@ -56,6 +112,20 @@ footer {
 .user-container {
   display: inline-block;
   padding: 0.4em 1em;
+  &:hover {
+    &:before {
+      color: #FFF;
+    }
+  }
+  &:before {
+    color: #999;
+    font-size: 3em;
+    margin-right:0.2em;
+    .transition;
+  }
+  a {
+    color: #FFF;
+  }
 }
 
 .user-image {
@@ -85,6 +155,10 @@ footer {
     position: relative;
     z-index: 1;
     .transition;
+    &:before {
+      position: relative;
+      top: 1px;
+    }
     &:hover, &:focus {
       background: #333;
     }
@@ -116,6 +190,63 @@ footer {
   font-size: 1.1em;
 }
 
+.user-config-layout {
+  position: fixed;
+  left: -@widthuser;
+  top: 0;
+  height: 100%;
+  width: @widthuser;
+  background: #999;
+  padding: 1.5em;
+  .transition;
+  box-shadow: 5px 0 10px rgba(0,0,0,0.3);
+  h2 {
+    margin-bottom: 1em;
+    text-transform: uppercase;
+  }
+  form {
+    div {
+      margin-bottom: 1em;
+    }
+  }
+  label {
+    display: block;
+  }
+  input {
+    width: 100%;
+  }
+  .btn {
+    width: auto;
+    margin-top: 1em;
+  }
+}
+
+.grp-form-2col {
+  input {
+    width: 48%;
+    & + input {
+      margin-left: 2.5%;
+    } 
+  }
+}
+
+.user-config-password {
+  background: #CCC;
+}
+
+.user-info-container {
+  .btnClick {
+    padding-left: 2.5em;
+    position: relative;
+    &:before {
+      font-size: 2em;
+      position: absolute;
+      left: 0.5em;
+      top: 0.25em;
+    }
+  }
+}
+
 /* ==========================================================================
    2 = Apps
    ========================================================================== */
@@ -139,6 +270,7 @@ footer {
   padding: 1em 0.5em;
   width: 5.4em;
   height: 5.36em;
+  .transition;
   span {
     display: block;
     margin-top: -0.5em;
@@ -155,7 +287,9 @@ footer {
   text-align: left;
   margin-bottom: 0;
   letter-spacing: normal;
+  
   &:first-child {
+    .transition;
     margin-left: 10.8em!important;
   }
 }
