--- a/user/interface.less
+++ b/user/interface.less
@@ -1,11 +1,11 @@
 @import "../lib/css/mixins-flex.less";
 
 .transition() {
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 /* ==========================================================================
@@ -18,35 +18,29 @@
    1 = User
    ========================================================================== */
 
-@widthuser: 25em;
+@widthuser: 20em;
 
 .overlay {
-  background: rgb(104,104,104);
-  background: -moz-radial-gradient(center, ellipse cover,  rgba(104,104,104,1) 0%, rgba(68,68,68,1) 100%);
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(104,104,104,1)), color-stop(100%,rgba(68,68,68,1)));
-  background: -webkit-radial-gradient(center, ellipse cover,  rgba(104,104,104,1) 0%,rgba(68,68,68,1) 100%);
-  background: -o-radial-gradient(center, ellipse cover,  rgba(104,104,104,1) 0%,rgba(68,68,68,1) 100%);
-  background: -ms-radial-gradient(center, ellipse cover,  rgba(104,104,104,1) 0%,rgba(68,68,68,1) 100%);
-  background: radial-gradient(ellipse at center,  rgba(104,104,104,1) 0%,rgba(68,68,68,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#686868', endColorstr='#444444',GradientType=1 );
+  background: #41444F;
   position: absolute;
   width: 100%;
   height: 100%;
   padding:2em 3em;
   display: none;
-  overflow: hidden;
+  overflow-y: auto;
+  //overflow: hidden;
   .transition;
   &.active {
     display: block;
   }
   &.user-active {
-    padding-left: @widthuser;
+    padding-left: @widthuser+2;
     .user-config-container {
       left: 0;
     }
     .user {
-      width: calc(100%-@widthuser);
-      left: @widthuser;
+      //width: calc(100%-@widthuser);
+      padding-left: @widthuser;
     }
   }
   &.password-active {
@@ -64,6 +58,7 @@
     }
     .apps {
       width: 81%;
+      padding-left: 2em;
       a {
         font-size: 3em;
       }
@@ -93,16 +88,17 @@
 }
 
 .user {
-  /*margin: 1.5em 0;*/
-  background: #222;
-  position: fixed;
-  top: 0;
+  background: #333;
+  margin: auto;
+  z-index: 20;
+  .transition;
   left: 0;
   width: 100%;
   height: 4em;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.4);
-  z-index: 20;
-  .transition;
+  position: fixed;
+  top: 0;
+  box-shadow: -3px 0 10px 0 rgba(0, 0, 0, 0.5) inset;
+  margin-bottom: 2em;
 }
 
 footer {
@@ -139,6 +135,15 @@ footer {
   margin: 0.2em auto 0;
 }
 
+.user-image:before {
+  position: absolute;
+  font-size: 2em;
+  bottom: 0;
+  left: 50%;
+  margin-left: -0.5em;
+  color: #444;
+}
+
 .user-menu {
   float: right;
   letter-spacing: -5px;
@@ -165,13 +170,22 @@ footer {
   }
 }
 
-.user-image:before {
-  position: absolute;
-  font-size: 2em;
-  bottom: 0;
-  left: 50%;
-  margin-left: -0.5em;
-  color: #444;
+.user-info-sup {
+  text-align: left;
+}
+
+.user-info-sup {
+  margin-top: 1em;
+  color: #FFF;
+  text-align: right;
+  padding-right: 0.5em;
+  ul {
+    padding-left: 0;
+  }
+  li {
+    margin-left: 0;
+    list-style-type: none;
+  }
 }
 
 .user-info {
@@ -196,10 +210,11 @@ footer {
   top: 0;
   height: 100%;
   width: @widthuser;
-  background: #999;
+  background: #333;
   padding: 1.5em;
   .transition;
-  box-shadow: 5px 0 10px rgba(0,0,0,0.3);
+  //box-shadow: -5px 0 10px rgba(0,0,0,0.5) inset;
+  z-index: 20;
   h2 {
     margin-bottom: 1em;
     text-transform: uppercase;
@@ -255,48 +270,53 @@ footer {
   /*text-align: center;*/
   position: relative;
   z-index: 10;
-  width: 78%;
-  margin: auto;
-  padding-top: 10em;
+  width: 100%;
+  //padding-left: 12em;
+  padding-top: 6em;
+  letter-spacing: -5px;
+  > * {
+    letter-spacing: normal;
+  }
 }
 
-.apps h2 {
+.apps .title {
   color: #FFF;
   //border: 4px solid #FFF;
   background: #333;
-  position: absolute;
-  left: 0;
+  //left: 0.5em;
   font-size: 2em;
   padding: 1em 0.5em;
   width: 5.4em;
   height: 5.36em;
+  box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5) inset;
+  
   .transition;
   span {
     display: block;
     margin-top: -0.5em;
     font-size: 1.5em;
+    margin-left: 0;
   }
 }
 
-.apps ul {
+.listing-apps {
   letter-spacing: -5px;
+  width: 100%;
 }
 
-.apps li {
+.listing-apps li {
   display: inline-block;
   text-align: left;
   margin-bottom: 0;
   letter-spacing: normal;
-  
   &:first-child {
-    .transition;
-    margin-left: 10.8em!important;
+    margin-left: 1em;
   }
 }
 
 .interface .apps .box {
-  margin: 0;
-  box-shadow:none;
+  margin: 0 0 1em 1em;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4), -2px -2px 3px 0 rgba(0, 0, 0, 0.7) inset;
   background: transparent;
 }
 
@@ -312,7 +332,11 @@ footer {
   }
 }
 
-.apps a {
+.float-right {
+  float: right;
+}
+
+.listing-apps .box a {
   display: block;
   min-height: 2em;
   color: #FFF;
@@ -325,26 +349,42 @@ footer {
   left: 0;
   padding: 0.2em 0.2em;
   .transition;
-  &:hover {
+  &:hover, &:focus {
     left: -10px;
     top: -10px;
+    box-shadow:none;
     &:after {
       width: 10px;
+      
     }
     &:before {
       height: 10px;
+    }
+  }
+  &:active {
+    left: -5px;
+    top: -5px;
+    box-shadow:none;
+    &:after {
+      width: 5px;
+      
+    }
+    &:before {
+      height: 5px;
     }
   }
   &:after, &:before {
     content: "";
     position: absolute;
     .transition;
+    
   }
   &:after {
     width: 0;
     height: 100%;
     top: 5px;
     left: 2.7em;
+    box-shadow: 5px 0px 10px rgba(0,0,0,0.4);
     -webkit-transform: skew(0, 45deg);
        -moz-transform: skew(0, 45deg);
         -ms-transform: skew(0, 45deg);
@@ -356,6 +396,7 @@ footer {
     height: 0;
     top: 2.7em;
     left: 5px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
     -webkit-transform: skew(45deg, 0);
        -moz-transform: skew(45deg, 0);
         -ms-transform: skew(45deg, 0);
@@ -364,7 +405,7 @@ footer {
   }
 } 
 
-.apps li span {
+.listing-apps li span {
   display: block;
   font-size: 0.3em;
   margin-top: -1.2em;
