--- a/lib/css/main.less
+++ b/lib/css/main.less
@@ -99,16 +99,20 @@ a {
 }
 
 .btn {
-  background: #409edd;
+  background: @blue;
   color: #FFF;
   padding: 0.8em 1.5em;
   text-transform: uppercase;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.5);
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.5);
   display: inline-block;
   .transition;
   text-align: center;
   &:hover, &:focus {
     background: #2980b9;
+  }
+  &:active {
+    background: #2980b9;
+    box-shadow: 1px 1px 5px rgba(0,0,0,0.5) inset;
   }
   &.icon {
     padding-left: 1em;
