--- a/user/interface.less
+++ b/user/interface.less
@@ -78,11 +78,12 @@
   color: #333;
   position: absolute;
   right: 1em;
-  top: 1em;
+  top: -1.9em;
   padding: 0.2em 0.5em;
   font-weight: bold;
   cursor: pointer;
-  &:hover {
+  .transition;
+  &:hover, &:focus {
     background: #FFF;
   }
 }
@@ -207,17 +208,49 @@ footer {
 .user-config-layout {
   position: fixed;
   left: -@widthuser;
-  top: 0;
+  top: 4em;
   height: 100%;
   width: @widthuser;
-  background: #333;
+  background: #545866;
   padding: 1.5em;
   .transition;
-  //box-shadow: -5px 0 10px rgba(0,0,0,0.5) inset;
+  box-shadow: -5px -10px 10px rgba(0,0,0,0.6) inset;
   z-index: 20;
-  h2 {
+  text-align: right;
+  h3 {
     margin-bottom: 1em;
+    font-family: 'source_sans_probold';
+    border-bottom: 1px solid #333;
+    padding-bottom: 0.5em;
+    position: relative;
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      border-top: 1px solid #CCC;
+    }
+    a {
+      background: #CCC;
+      color: #333;
+      display: block;
+      float: left;
+      padding: 0 0.5em;
+      .transition;
+      &:hover, &:focus {
+        background: #FFF;
+      }
+    }
+  }
+  .title {
     text-transform: uppercase;
+    color: #FFF;
+    font-size: 1.8em;
+  }
+  li {
+    color: #CCC;
   }
   form {
     div {
